[tool.poetry]
name = "astar-pathfinder"
version = "0.1.0"
description = "A Python implementation of the A* pathfinding algorithm for data science applications"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
string_normalization = False

[tool.isort]
multi_line_output = 3
use_black = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--cov=src"]
python_paths = ["src"]

[tool.pytype]
include = ["src/**/*"]
exclude = ["src/test/*", "src/main.py"]

[tool.readthedocs]
project = "astar-pathfinder"
authors = ["Samy Alderson"]
version = "0.1.0"
description = "A Python implementation of the A* pathfinding algorithm for data science applications"
github_user = "SamyAlderson"
github_repo = "astar-pathfinder"